fixed letter spacing FF issue

--- a/scss/component/_review.scss
+++ b/scss/component/_review.scss
@@ -32,7 +32,7 @@
   display: inline-block;
   vertical-align: text-bottom;
   color: $greyscale-04;
-  letter-spacing: -5px;
+  letter-spacing: -3px;
 
   .material-icons {
     font-size: 1.2rem;
